Fixed sizing of font on mobile and issue with navigation buttons that caused part of the button to not register the change in destination page

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body {
 }
 
 header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -94,8 +95,12 @@ h1 {
 }
 
 .nav-link {
-  display: flex;
   text-decoration: none;
+}
+
+.nav-link li {
+  display: flex;
+  align-items: center;
 }
 
 .home-image-container {
@@ -133,7 +138,6 @@ h1 {
 .product-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .product-content {
@@ -162,19 +166,70 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Add transition for smooth color change */
+  transition: background-color 0.3s ease, transform 0.1s ease-in-out;
 }
 
 .cart-button:hover {
-  background-color: darkorange; /* Change this color to whatever you prefer */
+  background-color: darkorange;
+}
+
+.cart-button:active {
+  transform: scale(0.95); /* New shrink effect */
+}
+
+.cart-container {
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart-product {
+  flex-direction: row;
+  width: 1000px;
+}
+
+.cart-image-container {
+  width: 50%;
+  border: none;
+  border-right: 5px solid var(--accent-color);
 }
 
 .clicked {
   border-bottom: 3px solid #fff;
 }
 
+@media (max-width: 1035px) {
+  .cart-container {
+    flex-direction: row;
+  }
+
+  .cart-product {
+    flex-direction: column;
+    width: 500px;
+  }
+
+  .cart-image-container {
+    width: 100%;
+    border: none;
+    border-bottom: 5px solid var(--accent-color);
+  }
+}
+
 @media (max-width: 430px) {
   .header-navigation-list {
     flex-direction: column;
+  }
+
+  .product-image-container {
+    height: 250px;
+  }
+
+  .product-title {
+    font-size: 16px;
+  }
+
+  .product-description,
+  .product-price,
+  .product-category {
+    font-size: 14px;
   }
 }
